@@ -55,6 +55,9 @@ Problems corrected in 4.0.1.
     Use of uninitialized value in string ne at /usr/share/shorewall-perl/Shorewall/Tc.pm line 285, <$currentfile> line 18.
        ERROR: Class Id 1:110 is not associated with device eth0 : /etc/shorewall/tcrules (line 18)
 
+6)   If no PATH was available when Shorewall-perl is run, a Perl run-time
+     warning was issued.
+
 Other changes in Shorewall 4.0.1.
 
 1)  A new EXPAND_POLICIES option is added to shorewall.conf. The
