@@ -6,6 +6,8 @@ Changes in 4.0.1
 
 3)  Correct handling of 'ipsec' option in the hosts file.
 
+4)  Corrent handling of 'PATH' in Shorewall-perl.
+
 Changes in 4.0.0 Final
 
 1)  Fix lite install.sh manpage problem.
